--- a/package.json
+++ b/package.json
@@ -11,10 +11,33 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "next": "14.0.3",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@tanstack/react-query": "^5.66.11",
+    "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.453.0",
+    "next": "^14.0.3",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^4.12.0",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
