--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.453.0",
     "next": "^14.0.3",
     "next-themes": "^0.4.4",
