--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
